# homework_30

./: db.sqlite3  pyproject.toml  pytest.ini
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
ads/migrations/: 0001_initial.py
ads/urls/: ad.py  selection.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
datasets/: ad.json  ads.json  categories.json  convert_json.py  user.json
homework_27/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
tests/selection/: selection_create_test.py
users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng.py
users/urls/: location.py  user.py
