[tool.poetry]
name = "homework-27"
version = "0.1.0"
description = ""
authors = ["porublevnik <porublevnik@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_27"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
psycopg2-binary = "^2.9.6"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
